--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <link href="/open-iconic/font/css/open-iconic-foundation.css" rel="stylesheet">
     <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css'/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/open-iconic/1.1.1/font/css/open-iconic-bootstrap.min.css" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./doc/css/style.css" />
     <title>Work Day Scheduler</title>
   </head>
 
@@ -42,6 +42,6 @@
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
-    <script src = "./script.js"></script>
+    <script src = "./doc/script/script.js"></script>
   </body>
 </html>
